--- a/grade-submission-portal-pod.yaml
+++ b/grade-submission-portal-pod.yaml
@@ -8,7 +8,7 @@ metadata:
     app.kubernetes.io/instance: grade-submission-portal
 spec:
   containers:
-  - name: myapp
+  - name: grade-submission-portal
     image: rslim087/kubernetes-course-grade-submission-portal
     resources:
       requests:
@@ -18,3 +18,11 @@ spec:
         memory: "128Mi"
     ports:
       - containerPort: 5001
+  - name: grade-submission-portal-health-checker
+    image: rslim087/kubernetes-course-grade-submission-portal-health-checker
+    resources:
+      requests:
+        memory: "128Mi"
+        cpu: "200m"
+      limits:
+        memory: "128Mi"
