added clusterIP and node port service

--- a/grade-submission-portal-service.yaml
+++ b/grade-submission-portal-service.yaml
@@ -3,6 +3,7 @@ kind: Service
 metadata:
   name: grade-submission-portal
 spec:
+  type: NodePort
   selector:
     app.kubernetes.io/instance: grade-submission-portal
   ports:
